
2012-05-08  Cedric Bail

	* Add edje_watch tools to automatically rebuild edc.

2012-05-09  Cedric Bail

	* Fix bug in case of nesting edje_object_signal_emit and edje_object_signal_callback_{add,del}
	* Check that the file changed on disk when trying to reopen it.
	* Emit ['edje,change,file', 'edje'] when the file change on disk.
	* Automatically reload edje file when it change in edje_player.

2012-05-10  Cedric Bail

	* Preserve user box and table items during call of edje_object_file_set.

2012-05-12  Rajeev Ranjan (Rajeev)

	* Add edje_cc optimization to remove alpha channel flag from images
        with absolutely no alpha in them if marked as havin alpha in the
        originals

2012-05-14  Cedric Bail

	* Preserve drag informations during call of edje_object_file_set.

2012-05-15  Carsten Haitzler (The Rasterman)

        * Optimize edje_cc to be multi-threaded and compress in parallel
        * Remove O(n2) algorithms for O(1) in the parser in edje_cc
        * Add options for the new compression modes in Eet. (fastcomp
        and fastdecomp - LZ4 and LZ4HC).
        * Overall sped up edje_cc by 4x faster (if you use fastcomp)
        and about 4.5x faster with old zlib compression.

2012-05-16  Cedric Bail

	* Fix table and text when fixed point is turned on.
	* Clamp image tween to never underflow also.

2012-05-20  Cedric Bail

	* Use Eina_File instead of fopen when possible in edje_cc.

2012-05-21  Shilpa Onkar Singh

        * Fix patch for edje draggable jump issue when external event
        area is used for the dragable.

2012-06-04  Cedric Bail

	* Add SPACER part to reduce the load on the canvas (lighter and faster theme).

2012-06-04  Prince Kumar Dubey

	* Fix decompile of sound samples to use sound source file, not name
	* Fix decompile of sound samples not double-free
        * Fix alsa configure option to be alsa, not flac.

2012-06-06  Jihoon Kim

	* edje_entry: display preedit string even though there is no attribute