@@ -25,3 +25,4 @@ Mikael Sans <sans.mikael@gmail.com>
 Jérôme Pinot <ngc891@gmail.com>
 Rajeev Ranjan (Rajeev) <rajeev.r@samsung.com> <rajeev.jnnce@gmail.com>
 ChunEon Park (Hermet) <hermet@hermet.pe.kr>
+Kim Shinwoo <kimcinoo.efl@gmail.com>
